--- a/presentation/src/main/res/layout/view_user_details.xml
+++ b/presentation/src/main/res/layout/view_user_details.xml
@@ -6,7 +6,7 @@
               android:orientation="vertical"
     >
 
-  <com.githubusers.presentation.component.AutoLoadImageView
+  <ImageView
       android:id="@+id/iv_cover"
       android:layout_width="match_parent"
       android:layout_height="@dimen/iv_cover_height"
