--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -11,15 +11,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-
-    <Button
-        android:id="@+id/btn_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_user_name"
-        android:text="@string/btn_search"
-        />
-
     <EditText
         android:id="@+id/edit_user_name"
         android:layout_width="match_parent"
@@ -29,5 +20,21 @@
         android:layout_alignParentStart="true"
         android:gravity="center"
         android:hint="@string/edit_user_name"
+        />
+
+    <Button
+        android:id="@+id/btn_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edit_user_name"
+        android:text="@string/btn_search"
+        />
+
+    <Button
+        android:id="@+id/btn_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_search"
+        android:text="@string/btn_history"
         />
 </RelativeLayout>
