--- a/presentation/src/main/res/layout/activity_user_details.xml
+++ b/presentation/src/main/res/layout/activity_user_details.xml
@@ -9,6 +9,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.githubusers.presentation.features.users.UserDetailsActivity">
+    tools:context="com.githubusers.presentation.features.users.details.UserDetailsActivity">
 
 </RelativeLayout>
