--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@
     <dimen name="header_text_size">26sp</dimen>
     <dimen name="header_margin">5dp</dimen>
     <dimen name="iv_cover_height">140dp</dimen>
+
+    <!--Listview rows stuff-->
+    <dimen name="list_row_padding">5dp</dimen>
+    <dimen name="list_row_text_size">20sp</dimen>
+    <dimen name="list_row_icon_width">50dp</dimen>
+    <dimen name="list_row_icon_padding">5dp</dimen>
 </resources>
