#feat: add novas funções para extrator web

--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -39,10 +39,18 @@
         />
 
     <Button
-        android:id="@+id/btn_history"
+        android:id="@+id/btn_search_website"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btn_search_lod"
+        android:text="@string/btn_search_website"
+        />
+
+    <Button
+        android:id="@+id/btn_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_search_website"
         android:text="@string/btn_history"
         />
 </RelativeLayout>
