#feat: fazer integrador

--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:gravity="center"
-        android:hint="@string/edit_search"
+        android:hint="@string/edit_title"
         />
 
     <Button
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/edit_search"
         android:text="@string/btn_search_api"
+        android:visibility="gone"
         />
 
     <Button
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/btn_search_api"
         android:text="@string/btn_search_lod"
+        android:visibility="gone"
         />
 
     <Button
@@ -44,13 +46,22 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/btn_search_lod"
         android:text="@string/btn_search_website"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/btn_search_all"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_search_website"
+        android:text="@string/btn_search_all"
         />
 
     <Button
         android:id="@+id/btn_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_search_website"
+        android:layout_below="@+id/btn_search_all"
         android:text="@string/btn_history"
         />
 </RelativeLayout>
