--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:inputType="textCapSentences"
         android:gravity="center"
         android:hint="@string/edit_title"
         />
@@ -57,11 +58,4 @@
         android:text="@string/btn_search_all"
         />
 
-    <Button
-        android:id="@+id/btn_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_search_all"
-        android:text="@string/btn_history"
-        />
 </RelativeLayout>
